[project]
name = "ai-dispatch"
version = "0.1.0"
description = "Daily AI digest pushed to Lark via GitHub Actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser==6.0.11",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "lark-oapi>=1.4.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
